[package]
name = "ayaya"
version = "0.1.1"
authors = ["Hannes Braun <hannesbraun@mail.de>"]
edition = "2021"
description = "Testing tool for the Open Sound Control protocol"

[dependencies]
fltk = "1.3.15"
rosc = "0.9.0"

[package.metadata.bundle]
name = "Ayaya"
identifier = "net.hannesbraun.ayaya"
copyright = "Copyright (c) 2021-2022, Hannes Braun"
